--- a/video-info/package.json
+++ b/video-info/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^1.7.9"
+    "electron": "^1.7.9",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
